// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link should render inverted link correct 1`] = `
<a
  class="sc-bdfBwQ flex items-center text-white"
  href="https://google.com"
  target="_blank"
>
  Google
  <svg
    class="w-5 h-5 ml-0.5"
    fill="none"
    stroke="currentColor"
    viewBox="0 0 25 25"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
    />
  </svg>
</a>
`;

exports[`Link should render link without crashin 1`] = `
<a
  class="sc-bdfBwQ flex items-center text-gray-600 hover:text-blue-700"
  href="https://google.com"
  target="_blank"
>
  Google
  <svg
    class="w-5 h-5 ml-0.5"
    fill="none"
    stroke="currentColor"
    viewBox="0 0 25 25"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
    />
  </svg>
</a>
`;
